Adds deploy workflow

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <title>joyride.fm</title>
   </head>
   <body>
-    <p>Hi!</p>
+    <h1>Hi!</h1>
+    <p>We're joyride.fm. We make rhythm games.</p>
+    <ul>
+      <li><a href="https://mmm.joyride.fm" target="_blank">Mystery Mansion Madness</a></li>
+    </ul>
   </body>
 </html>
